server/src/grammar/.antlr/LuauParser.java
// Generated from d:/3bdo/Abdulrehman - DO NOT TOUCH/Coding Projects/Visual Studio Code/extensions/Roblox-Luau [parser test]/server/src/grammar/Luau.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LuauParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, STRING=31, 
		LUA_STRING=32, DOUBLE_QUOTES_STRING=33, SINGLE_QUOTES_STRING=34, MULTI_LINE_STRING=35, 
		INTERPOLATED_STRING=36, NUMBER=37, INT=38, FLOAT_1=39, FLOAT_2=40, FLOAT_3=41, 
		FLOAT=42, SCIENTIFIC_NOTATION=43, HEX_NUMBER=44, BINARY_NUMBER=45, OCTAL_NUMBER=46, 
		NIL=47, FALSE=48, TRUE=49, RETURN=50, END=51, BREAK=52, IF=53, ELSEIF=54, 
		THEN=55, ELSE=56, WHILE=57, DO=58, FOR=59, IN=60, REPEAT=61, UNTIL=62, 
		LOCAL=63, FUNCTION=64, NAME=65, TYPE=66, TYPEOF=67, EXPORT=68, EscapeSequence=69, 
		NormalEscape=70, HexadecimalEscape=71, UnicodeEscape=72, SpaceEscape=73, 
		OctalEscape=74, MULTI_LINE_COMMENT=75, SINGLE_LINE_COMMENT=76, WS=77, 
		NEWLINE=78, SEMI_COLON=79, COLON=80, DOUBLE_COLON=81, EQUAL=82, DOT=83, 
		COMMA=84, OPEN_PARENTHESIS=85, CLOSE_PARENTHESIS=86, CLOSE_SQUARE_BRACKETS=87, 
		OPEN_CURLY_BRACKETS=88, CLOSE_CURLY_BRACKETS=89, ARROW=90, INTERSECTION=91, 
		UNION=92, OPTIONAL=93;
	public static final int
		RULE_file = 0, RULE_chunk = 1, RULE_block = 2, RULE_statement = 3, RULE_lastStatement = 4, 
		RULE_setExpression = 5, RULE_compoundSetExpression = 6, RULE_doBlock = 7, 
		RULE_whileExpression = 8, RULE_repeatBlock = 9, RULE_ifStatement = 10, 
		RULE_forExpression = 11, RULE_forInExpression = 12, RULE_globalFunction = 13, 
		RULE_localFunction = 14, RULE_variableDeclaration = 15, RULE_typeDeclaration = 16, 
		RULE_funcname = 17, RULE_varList1 = 18, RULE_nextExpression = 19, RULE_nameList = 20, 
		RULE_typedNameList = 21, RULE_mixedNamesList = 22, RULE_allNamesList = 23, 
		RULE_allNamesListType = 24, RULE_expressionList1 = 25, RULE_expressionList2 = 26, 
		RULE_expressionList = 27, RULE_expression1 = 28, RULE_expression2 = 29, 
		RULE_expression = 30, RULE_var = 31, RULE_prefixexp = 32, RULE_globalIteratorFunction = 33, 
		RULE_functioncall = 34, RULE_varOrExp = 35, RULE_nameAndArgs = 36, RULE_varSuffix = 37, 
		RULE_args = 38, RULE_function = 39, RULE_funcbody = 40, RULE_functionParameters = 41, 
		RULE_functionParametersType = 42, RULE_functionReturns = 43, RULE_parameterList = 44, 
		RULE_parameterListType = 45, RULE_returnList = 46, RULE_variadicParameter = 47, 
		RULE_variadicParameterType = 48, RULE_variadicReturn = 49, RULE_tableconstructor = 50, 
		RULE_fieldList = 51, RULE_field = 52, RULE_fieldsep = 53, RULE_compound_operations = 54, 
		RULE_binary_operations = 55, RULE_unary_operations = 56, RULE_simpleType = 57, 
		RULE_singletonType = 58, RULE_unionSuffix = 59, RULE_intersectionSuffix = 60, 
		RULE_type = 61, RULE_genericTypePackParameter = 62, RULE_genericTypeList = 63, 
		RULE_genericTypePackParameterWithDefault = 64, RULE_genericTypeListWithDefaults = 65, 
		RULE_typeList = 66, RULE_typeParams = 67, RULE_typePack = 68, RULE_genericTypePack = 69, 
		RULE_variadicTypePack = 70, RULE_functionType = 71, RULE_tableIndexer = 72, 
		RULE_tableProperty = 73, RULE_tablePropOrIndexer = 74, RULE_propList = 75, 
		RULE_tableType = 76, RULE_typedName = 77, RULE_optionalTypedName = 78, 
		RULE_comment = 79;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "chunk", "block", "statement", "lastStatement", "setExpression", 
			"compoundSetExpression", "doBlock", "whileExpression", "repeatBlock", 
			"ifStatement", "forExpression", "forInExpression", "globalFunction", 
			"localFunction", "variableDeclaration", "typeDeclaration", "funcname", 
			"varList1", "nextExpression", "nameList", "typedNameList", "mixedNamesList", 
			"allNamesList", "allNamesListType", "expressionList1", "expressionList2", 
			"expressionList", "expression1", "expression2", "expression", "var", 
			"prefixexp", "globalIteratorFunction", "functioncall", "varOrExp", "nameAndArgs", 
			"varSuffix", "args", "function", "funcbody", "functionParameters", "functionParametersType", 
			"functionReturns", "parameterList", "parameterListType", "returnList", 
			"variadicParameter", "variadicParameterType", "variadicReturn", "tableconstructor", 
			"fieldList", "field", "fieldsep", "compound_operations", "binary_operations", 
			"unary_operations", "simpleType", "singletonType", "unionSuffix", "intersectionSuffix", 
			"type", "genericTypePackParameter", "genericTypeList", "genericTypePackParameterWithDefault", 
			"genericTypeListWithDefaults", "typeList", "typeParams", "typePack", 
			"genericTypePack", "variadicTypePack", "functionType", "tableIndexer", 
			"tableProperty", "tablePropOrIndexer", "propList", "tableType", "typedName", 
			"optionalTypedName", "comment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<'", "'>'", "'...'", "'['", "'.'", "'+='", "'-='", "'*='", "'/='", 
			"'^='", "'%='", "'..='", "'+'", "'-'", "'*'", "'/'", "'//'", "'^'", "'%'", 
			"'..'", "'<='", "'>='", "'=='", "'~='", "'and'", "'or'", "'not'", "'#'", 
			"'true'", "'false'", null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, "'--'", null, null, null, null, null, "'='", null, null, null, 
			null, "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, "STRING", "LUA_STRING", "DOUBLE_QUOTES_STRING", 
			"SINGLE_QUOTES_STRING", "MULTI_LINE_STRING", "INTERPOLATED_STRING", "NUMBER", 
			"INT", "FLOAT_1", "FLOAT_2", "FLOAT_3", "FLOAT", "SCIENTIFIC_NOTATION", 
			"HEX_NUMBER", "BINARY_NUMBER", "OCTAL_NUMBER", "NIL", "FALSE", "TRUE", 
			"RETURN", "END", "BREAK", "IF", "ELSEIF", "THEN", "ELSE", "WHILE", "DO", 
			"FOR", "IN", "REPEAT", "UNTIL", "LOCAL", "FUNCTION", "NAME", "TYPE", 
			"TYPEOF", "EXPORT", "EscapeSequence", "NormalEscape", "HexadecimalEscape", 
			"UnicodeEscape", "SpaceEscape", "OctalEscape", "MULTI_LINE_COMMENT", 
			"SINGLE_LINE_COMMENT", "WS", "NEWLINE", "SEMI_COLON", "COLON", "DOUBLE_COLON", 
			"EQUAL", "DOT", "COMMA", "OPEN_PARENTHESIS", "CLOSE_PARENTHESIS", "CLOSE_SQUARE_BRACKETS", 
			"OPEN_CURLY_BRACKETS", "CLOSE_CURLY_BRACKETS", "ARROW", "INTERSECTION", 
			"UNION", "OPTIONAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Luau.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LuauParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FileContext extends ParserRuleContext {
		public ChunkContext chunk() {
			return getRuleContext(ChunkContext.class,0);
		}
		public TerminalNode EOF() { return getToken(LuauParser.EOF, 0); }
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(160);
			chunk();
			setState(161);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ChunkContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public LastStatementContext lastStatement() {
			return getRuleContext(LastStatementContext.class,0);
		}
		public List<TerminalNode> SEMI_COLON() { return getTokens(LuauParser.SEMI_COLON); }
		public TerminalNode SEMI_COLON(int i) {
			return getToken(LuauParser.SEMI_COLON, i);
		}
		public ChunkContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_chunk; }
	}

	public final ChunkContext chunk() throws RecognitionException {
		ChunkContext _localctx = new ChunkContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_chunk);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 53)) & ~0x3f) == 0 && ((1L << (_la - 53)) & 4307598705L) != 0)) {
				{
				{
				setState(163);
				statement();
				setState(165);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI_COLON) {
					{
					setState(164);
					match(SEMI_COLON);
					}
				}

				}
				}
				setState(171);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN || _la==BREAK) {
				{
				setState(172);
				lastStatement();
				setState(174);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==SEMI_COLON) {
					{
					setState(173);
					match(SEMI_COLON);
					}
				}

				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BlockContext extends ParserRuleContext {
		public ChunkContext chunk() {
			return getRuleContext(ChunkContext.class,0);
		}
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			chunk();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public SetExpressionContext setExpression() {
			return getRuleContext(SetExpressionContext.class,0);
		}
		public CompoundSetExpressionContext compoundSetExpression() {
			return getRuleContext(CompoundSetExpressionContext.class,0);
		}
		public FunctioncallContext functioncall() {
			return getRuleContext(FunctioncallContext.class,0);
		}
		public DoBlockContext doBlock() {
			return getRuleContext(DoBlockContext.class,0);
		}
		public WhileExpressionContext whileExpression() {
			return getRuleContext(WhileExpressionContext.class,0);
		}
		public RepeatBlockContext repeatBlock() {
			return getRuleContext(RepeatBlockContext.class,0);
		}
		public IfStatementContext ifStatement() {
			return getRuleContext(IfStatementContext.class,0);
		}
		public ForExpressionContext forExpression() {
			return getRuleContext(ForExpressionContext.class,0);
		}
		public ForInExpressionContext forInExpression() {
			return getRuleContext(ForInExpressionContext.class,0);
		}
		public GlobalFunctionContext globalFunction() {
			return getRuleContext(GlobalFunctionContext.class,0);
		}
		public LocalFunctionContext localFunction() {
			return getRuleContext(LocalFunctionContext.class,0);
		}
		public VariableDeclarationContext variableDeclaration() {
			return getRuleContext(VariableDeclarationContext.class,0);
		}
		public TypeDeclarationContext typeDeclaration() {
			return getRuleContext(TypeDeclarationContext.class,0);
		}
		public CommentContext comment() {
			return getRuleContext(CommentContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_statement);
		try {
			setState(194);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(180);
				setExpression();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(181);
				compoundSetExpression();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(182);
				functioncall();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(183);
				doBlock();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(184);
				whileExpression();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(185);
				repeatBlock();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(186);
				ifStatement();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(187);
				forExpression();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(188);
				forInExpression();
				}
				break;
			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(189);
				globalFunction();
				}
				break;
			case 11:
				enterOuterAlt(_localctx, 11);
				{
				setState(190);
				localFunction();
				}
				break;
			case 12:
				enterOuterAlt(_localctx, 12);
				{
				setState(191);
				variableDeclaration();
				}
				break;
			case 13:
				enterOuterAlt(_localctx, 13);
				{
				setState(192);
				typeDeclaration();
				}
				break;
			case 14:
				enterOuterAlt(_localctx, 14);
				{
				setState(193);
				comment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LastStatementContext extends ParserRuleContext {
		public TerminalNode RETURN() { return getToken(LuauParser.RETURN, 0); }
		public ExpressionListContext expressionList() {
			return getRuleContext(ExpressionListContext.class,0);
		}
		public TerminalNode BREAK() { return getToken(LuauParser.BREAK, 0); }
		public LastStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lastStatement; }
	}

	public final LastStatementContext lastStatement() throws RecognitionException {
		LastStatementContext _localctx = new LastStatementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lastStatement);
		int _la;
		try {
			setState(201);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
				enterOuterAlt(_localctx, 1);
				{
				setState(196);
				match(RETURN);
				setState(198);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 985302407593992L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 18874371L) != 0)) {
					{
					setState(197);
					expressionList();
					}
				}

				}
				break;
			case BREAK:
				enterOuterAlt(_localctx, 2);
				{
				setState(200);
				match(BREAK);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SetExpressionContext extends ParserRuleContext {
		public VarList1Context varList1() {
			return getRuleContext(VarList1Context.class,0);
		}
		public TerminalNode EQUAL() { return getToken(LuauParser.EQUAL, 0); }
		public ExpressionList1Context expressionList1() {
			return getRuleContext(ExpressionList1Context.class,0);
		}
		public SetExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_setExpression; }
	}

	public final SetExpressionContext setExpression() throws RecognitionException {
		SetExpressionContext _localctx = new SetExpressionContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_setExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(203);
			varList1();
			setState(204);
			match(EQUAL);
			setState(205);
			expressionList1();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CompoundSetExpressionContext extends ParserRuleContext {
		public VarContext var() {
			return getRuleContext(VarContext.class,0);
		}
		public Compound_operationsContext compound_operations() {
			return getRuleContext(Compound_operationsContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CompoundSetExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compoundSetExpression; }
	}

	public final CompoundSetExpressionContext compoundSetExpression() throws RecognitionException {
		CompoundSetExpressionContext _localctx = new CompoundSetExpressionContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_compoundSetExpression);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(207);
			var();
			setState(208);
			compound_operations();
			setState(209);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DoBlockContext extends ParserRuleContext {
		public TerminalNode DO() { return getToken(LuauParser.DO, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode END() { return getToken(LuauParser.END, 0); }
		public DoBlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_doBlock; }
	}

	public final DoBlockContext doBlock() throws RecognitionException {
		DoBlockContext _localctx = new DoBlockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_doBlock);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(211);
			match(DO);
			setState(212);
			block();
			setState(213);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
